--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -29,8 +29,18 @@
 		new ZambiaRouter();
 		Backbone.history.start();
 	});
+	var setup = {complete: 1000, missing: 200, partial: 400};
+	 data = [[setup.complete], [setup.missing], [setup.partial]];
+	 max = data.reduce(function (x, y) { return x + y[0]; }, 0);
+	    w = 400;
+	    h = 25;
 </script>
 <style type="text/css" media="screen">
+	.chart_data { width: 625px; font-size: 1.8em;margin-bottom:1.4em;}
+	.chart_data span {font-weight:bold;}
+	.data_missing { color: red;}
+	.data_partial { color: gold;}
+	.data_complete { color: green;}
 </style>
 </head>
 <body>
