--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -31,15 +31,15 @@
 		<tr>
 		<td valign="top">
 		<h1>Setup</h1>
-		<div class="chart_data">Missing: <span id="setup_missing" class="data_missing">0</span> Partial: <span id="setup_partial" class="data_partial">0</span> Complete: <span id="setup_complete" class="data_complete">0</span></div>
-		<h1 id="voting">Voting</h1>
-		<div class="chart_data">Missing: <span id="voting_missing" class="data_missing">0</span> Partial: <span id="voting_partial" class="data_partial">0</span> Complete: <span id="voting_complete" class="data_complete">0</span></div>
-		<h1 id="closing">Closing</h1>
-		<div class="chart_data">Missing: <span id="closing_missing" class="data_missing">0</span> Partial: <span id="closing_partial" class="data_partial">0</span> Complete: <span id="closing_complete" class="data_complete">0</span></div>
-		<h1 id="counting">Counting</h1>
-		<div class="chart_data">Missing: <span id="counting_missing" class="data_missing">0</span> Partial: <span id="counting_partial" class="data_partial">0</span> Complete: <span id="counting_complete" class="data_complete">0</span></div>
+		<div class="chart_data" id="setup"></div>
+		<h1>Voting</h1>
+		<div class="chart_data" id="voting"></div>
+		<h1>Closing</h1>
+		<div class="chart_data" id="closing"></div>
+		<h1>Counting</h1>
+		<div class="chart_data" id="counting"></div>
 		</td>
-		<td><img src='/assets/images/dash/zam_province.png' width='214' height='303' /></td>
+		<!--<td><img src='/assets/images/dash/zam_province.png' width='214' height='303' /></td>-->
 		</tr>
 	</table>
 </div>
