--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -140,7 +140,11 @@
 % if settings.ZAMBIA_DEPLOYMENT == 'GENERAL':
 	<div><span class="btn_red btn_space" style="margin-top:0.3em;margin-left:700px"><a href="javascript:;" id="form_add_checklist">Add Checklist</a><span>&nbsp;</span></span><div id="filter_dropper">Filter</div></div>
 % else:
-	<div><div id="filter_dropper">Filter</div></div>
+	% if user.has_perm('webapp.can_export'):
+		<div><iframe width="0" height="0" style="display:none" id="downloader"></iframe><span class="btn_red btn_space" style="margin-top:0.3em;margin-left:700px"><a href="javascript:;" id="form_export_checklist">Export</a><span>&nbsp;</span></span><div id="filter_dropper">Filter</div></div>
+	% else:
+		<div><div id="filter_dropper">Filter</div></div>
+	% endif
 % endif	
 	<div style="margin-top:2em"></div>
 </script>
