--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -126,6 +126,15 @@
 				<option value="3">Counting Partial</option>
 			</select>
 		</div>
+% if settings.ZAMBIA_DEPLOYMENT == 'RRP':
+		<div class="input_el">
+			<select name="ecz_match" id="search_ecz_match" class="input_smoke search_field">
+				<option value="">ECZ ID Match Status</option>
+				<option value="1">ECZ ID Match</option>
+				<option value="2">ECZ ID Mismatch</option>
+			</select>
+		</div>
+% endif
 		<div class="input_el">
 % if user.has_perm('webapp.can_sms') and settings.ZAMBIA_DEPLOYMENT == 'RRP':
 			<span class="btn_blue btn_space"><input type="submit" name="submit" value="Search" class="search_btn"><span>&nbsp;</span></span><span class="btn_gray btn_space"><a href="javascript:;" id="form_reset">Reset</a><span>&nbsp;</span></span><span class="btn_yellow btn_space"><a href='javascript:;' class="sms_sender">SMS</a><span>&nbsp;</span></span>
