implemented search persistence for checklists and incidents

--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -56,7 +56,7 @@
 							</ul> 
 						</li> 		
 						<li><a href="#!/contacts">Contacts</a></li>
-						<li><a href="/accounts/logout/">Sign Out</a></li> 
+						<li><a href="#!/logout">Sign Out</a></li> 
 					</ul>
 				</div><!-- /dropmenu --> 
 			</div><!-- /navigation -->
