enable search by pd id

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -117,6 +117,7 @@
 % endif
 		<div class="input_el"><input type="text" name="date" class="input_smoke search_field date_field persist" placeholder="Date" id="search_date__exact"></div>
 		<div class="input_el"><input type="text" name="location" class="input_smoke persist" placeholder="Location" id="location__id" style="width:30.5em"></div>
+		<div class="input_el"><input type="text" name="pd_id" class="input_smoke search_field persist" placeholder="PDID" id="search_pd_id" pattern=".*[0-9]" title="Numeric figures only"></div>
 		<div class="clear"></div>
 		<div class="input_el">
 			<select name="setup_status" id="search_setup_status" class="input_smoke search_field persist">
