screen and print css improvements

--- a/zambia/templates/zambia/process_analysis.html
+++ b/zambia/templates/zambia/process_analysis.html
@@ -1,9 +1,12 @@
 {% extends "zambia/elections_analysis.html" %}
 {% load calc %}
 {% block content %}
-<style type="text/css" media="screen">
+<style type="text/css" media="print">
 	html, body { color:#000; }
 	#process_analysis { font-size: 140%;}
+</style>
+<style type="text/css" media="screen">
+	#process_analysis { font-size: 120%;}
 </style>
 <script type="text/javascript" charset="utf-8">
 	userinfo = {};
